Fix the annoying 9px gap

--- a/css/mangaReader.css
+++ b/css/mangaReader.css
@@ -1,10 +1,14 @@
+.site-header {
+    z-index: 100;
+}
+
 #showmedia_mangareader_container {
     position: fixed;
     left: 0px;
-    top: 70px;
-    height: -webkit-calc(100% - 70px);
+    top: 61px;
+    height: -webkit-calc(100% - 61px);
     width: 100vw;
-    z-index: 99999;
+    z-index: 50;
 }
 
 #showmedia_videoplayer_object, #showmedia_videoplayer_object embed {
